--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,7 @@
 {
-    "semi": false,
-    "tabWidth": 2,
-    "printWidth": 100,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "jsxSingleQuote": true,
-    "bracketSpacing": true
-  }
-  
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2
+}
