--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,6 @@
 {
-  "plugins": [
-    "prettier",
-    "@typescript-eslint"
-  ],
-  "extends": [
-    "airbnb-typescript",
-    "react-app",
-    "prettier"
-  ],
+  "plugins": ["prettier", "@typescript-eslint"],
+  "extends": ["airbnb-typescript", "react-app", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
@@ -20,10 +13,7 @@
     }
   },
   "rules": {
-    "object-curly-spacing": [
-      "warn",
-      "always"
-    ],
+    "object-curly-spacing": ["warn", "always"],
     "no-unused-vars": [
       "warn",
       {
@@ -31,9 +21,7 @@
         "args": "none"
       }
     ],
-    "@typescript-eslint/semi": [
-      "off"
-    ],
+    "@typescript-eslint/semi": ["off"],
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
