--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^5.0.1",
     "react-virtuoso": "^2.14.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4",
@@ -90,5 +89,8 @@
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
     "workbox-streams": "^6.5.3"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
