--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/app": "1.1.1",
     "@capacitor/cli": "3.6.0",
     "@capacitor/core": "3.6.0",
+    "@capacitor/dialog": "^1.0.7",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.3",
     "@capacitor/status-bar": "1.0.8",
