--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.3",
+    "@types/mapbox-gl": "^2.7.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -67,9 +68,11 @@
     "eslint-webpack-plugin": "^3.2.0",
     "ionicons": "^6.0.2",
     "jotai": "^1.7.2",
+    "mapbox-gl": "^2.9.1",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^6.0.1",
+    "prettier-plugin-organize-imports": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
