--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@ionic/core": "^6.1.12",
     "@ionic/react": "^6.1.12",
     "@ionic/react-router": "^6.1.12",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.3",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.2",
     "@types/mapbox-gl": "^2.7.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
