--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not chrome < 51",
+      "not safari < 10",
+      "defaults",
+      "not ie 11"
     ],
     "development": [
       "last 1 chrome version",
@@ -25,7 +29,9 @@
   },
   "dependencies": {
     "@capacitor-community/http": "^1.4.1",
+    "@capacitor/android": "3.6.0",
     "@capacitor/app": "1.1.1",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/cli": "3.6.0",
     "@capacitor/core": "3.6.0",
     "@capacitor/dialog": "^1.0.7",
