--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "workbox-range-requests": "^6.5.3",
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
+    "workbox-streams": "^6.5.3",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1"
