--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
   },
   "dependencies": {
     "@capacitor-community/http": "^1.4.1",
-    "@capacitor/android": "3.6.0",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/camera": "^1.3.1",
-    "@capacitor/cli": "3.6.0",
-    "@capacitor/core": "3.6.0",
-    "@capacitor/dialog": "^1.0.7",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.3",
-    "@capacitor/status-bar": "1.0.8",
-    "@capacitor/storage": "^1.2.5",
+    "@capacitor/android": "^4.0.1",
+    "@capacitor/app": "^4.0.1",
+    "@capacitor/camera": "^4.0.1",
+    "@capacitor/cli": "^4.0.1",
+    "@capacitor/core": "^4.0.1",
+    "@capacitor/dialog": "^4.0.1",
+    "@capacitor/haptics": "^4.0.1",
+    "@capacitor/keyboard": "^4.0.1",
+    "@capacitor/preferences": "^4.0.1",
+    "@capacitor/status-bar": "^4.0.1",
     "@ionic/core": "^6.1.12",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/react": "^6.1.12",
