--- a/package.json
+++ b/package.json
@@ -28,21 +28,22 @@
     ]
   },
   "dependencies": {
+    "@awesome-cordova-plugins/http": "^6.2.0",
     "@capacitor-community/http": "^1.4.1",
-    "@capacitor/android": "^4.0.1",
-    "@capacitor/app": "^4.0.1",
-    "@capacitor/camera": "^4.0.1",
-    "@capacitor/cli": "^4.0.1",
-    "@capacitor/core": "^4.0.1",
-    "@capacitor/dialog": "^4.0.1",
-    "@capacitor/haptics": "^4.0.1",
-    "@capacitor/keyboard": "^4.0.1",
-    "@capacitor/preferences": "^4.0.1",
-    "@capacitor/status-bar": "^4.0.1",
-    "@ionic/core": "^6.1.12",
+    "@capacitor/android": "^4.5.0",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/camera": "^4.1.4",
+    "@capacitor/cli": "^4.5.0",
+    "@capacitor/core": "^4.5.0",
+    "@capacitor/dialog": "^4.1.0",
+    "@capacitor/haptics": "^4.1.0",
+    "@capacitor/keyboard": "^4.1.0",
+    "@capacitor/preferences": "^4.0.2",
+    "@capacitor/status-bar": "^4.1.0",
+    "@ionic/core": "^6.3.7",
     "@ionic/pwa-elements": "^3.1.1",
-    "@ionic/react": "^6.1.12",
-    "@ionic/react-router": "^6.1.12",
+    "@ionic/react": "^6.3.7",
+    "@ionic/react-router": "^6.3.7",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
@@ -58,6 +59,8 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-eslint": "^10.1.0",
+    "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-file": "^7.0.0",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
